--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ a {
     <strong>Categories and Image Selections from “Person” Classes, ImageNet</strong><br/>
     The project gathers examples of ImageNet’s “Person” categories like “Accused,” “Kleptomaniac,” and “Anti-Semite.” The faces are partly covered to show that these labels turn real people into harmful types. This evidence shows how classification systems create stereotypes. The images prove that bias is structural, not just an accident. They show how datasets can reproduce stigma and exclusion. This problem is central to computer vision.
     <div style="display: flex; justify-content: center; gap: 1em; margin-top: 1em;">
-      <img src="cat2.jpeg" alt="Selections from ImageNet 'Person' category" style="width: 35%; border-radius: 4px;" />
+      <img src="cat2.JPEG" alt="Selections from ImageNet 'Person' category" style="width: 35%; border-radius: 4px;" />
       <img src="cat1.jpg" alt="Labeled Images from ImageNet with redacted faces" style="width: 35%; border-radius: 4px;" />
     </div>
   </li>
